# image_tool

./: .gitignore  README.md  auto_rotate.sh  copy_media_from.sh  cp_image.sh  export_cr2_to_jpg.sh  export_images_for_cloud.sh  img  img.py  import_from_canon_32gb.sh  import_from_drone.sh  import_from_drone_old.sh  import_from_sony.sh  import_from_usb.sh  import_image.sh  import_media_gopro.sh  import_photos.sh  move_photos_from.sh  mv_image.sh  rm_image.sh  rotate.py  send_image_mail.py  view_image.sh  view_img.sh
framing/: add_date_to_image_landscape.sh  date_simplify.sh  env.sh  fonts.txt  get_date_from_image.sh
framing/test/: test_fonts_on_image.sh
google_photos_upload/: pyproject.toml
google_photos_upload/src/google_photos_upload/: google_photos_upload.py  upload.py
image_metadata/: generate_date_names.sh  get_image_date.sh
sync/: README.md  sync_image_checker.sh
