[tool.poetry]
name = "google_photos_upload"
version = "0.1.0"
description = ""
authors = ["thorgeir93 <thorgeirsigurd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client-stubs = "^1.15.0"
google-auth = "^2.15.0"
uplink = "^0.9.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
